# VFrame

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  common_defs.h  main.c  pwm_driver  pwm_driver.hex  vframe.h
16_bit_timer/: 16_bit_timer.c  16_bit_timer.h  16_bit_timer_defs.h
8_bit_timer/: 8_bit_timer.c  8_bit_timer.h  8_bit_timer_defs.h
ac/: ac.c  ac.h  ac_defines.h
adc/: adc.c  adc.h  adc_defs.h
eight_bit_timer/: eight_bit_timer.c  eight_bit_timer.h  eight_bit_timer_defs.h
gpio/: gpio.c  gpio.h
ring_buffer/: ring_buffer.c  ring_buffer.h
spi/: spi.c  spi.h  spi_defs.h
twi/: twi.c  twi.h  twi_defs.h
usart/: usart.c  usart.h  usart_defs.h
watchdog/: watchdog.c  watchdog.h  watchdog_defs.h
